--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 async-generator==1.10
+async-timeout==4.0.2
 attrs==21.4.0
 beautifulsoup4==4.10.0
 bootstrap4==0.1.0
@@ -11,11 +12,13 @@ configparser==5.2.0
 crayons==0.4.0
 cryptography==35.0.0
 defusedxml==0.7.1
+Deprecated==1.2.13
 Django==3.2.8
 django-allauth==0.45.0
 django-filter==21.1
 django-social-share==2.2.1
 django-stdimage==5.3.0
+django-user-agents==0.4.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 h11==0.12.0
@@ -28,14 +31,18 @@ mysql-connector-python-rf==2.2.2
 mysqlclient==2.1.1
 oauthlib==3.1.1
 outcome==1.1.0
+packaging==21.3
 Pillow==8.4.0
 protobuf==3.20.1
 pycparser==2.20
 PyJWT==2.3.0
 PyMySQL==1.0.2
 pyOpenSSL==21.0.0
+pyparsing==3.0.9
 python3-openid==3.2.0
 pytz==2021.3
+PyYAML==6.0
+redis==4.3.4
 requests==2.26.0
 requests-oauthlib==1.3.0
 selenium==4.1.0
@@ -43,12 +50,16 @@ six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
+spotipy==2.20.0
 sqlparse==0.4.2
 trio==0.19.0
 trio-websocket==0.9.2
+ua-parser==0.16.1
 unicode==2.8
 Unidecode==1.3.4
 urllib3==1.26.7
+user-agents==2.2.0
 webdriver-manager==3.5.2
 whitenoise==5.3.0
+wrapt==1.14.1
 wsproto==1.0.0
