--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 Django==3.2.8
 django-allauth==0.45.0
+django-crispy-forms==1.14.0
 django-filter==21.1
 django-social-share==2.2.1
 django-stdimage==5.3.0
